trybuild-qcell/src/compiletest/lcell_generativity-15.stderr
error[E0277]: `Rc<i32>` cannot be sent between threads safely
   --> src/compiletest/lcell_generativity-15.rs:13:17
    |
13  |         s.spawn(move |_| assert_eq!(100, **owner.ro(&cell))).join().unwrap(); // Compile fail
    |           ----- --------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |           |     |
    |           |     `Rc<i32>` cannot be sent between threads safely
    |           |     within this `[closure@$DIR/src/compiletest/lcell_generativity-15.rs:13:17: 13:25]`
    |           required by a bound introduced by this call
    |
    = help: within `[closure@$DIR/src/compiletest/lcell_generativity-15.rs:13:17: 13:25]`, the trait `Send` is not implemented for `Rc<i32>`
    = note: required because it appears within the type `UnsafeCell<Rc<i32>>`
    = note: required because it appears within the type `LCell<'_, Rc<i32>>`
note: required because it's used within this closure
   --> src/compiletest/lcell_generativity-15.rs:13:17
    |
13  |         s.spawn(move |_| assert_eq!(100, **owner.ro(&cell))).join().unwrap(); // Compile fail
    |                 ^^^^^^^^
note: required by a bound in `crossbeam::thread::Scope::<'env>::spawn`
   --> $CARGO/crossbeam-utils-0.7.2/src/thread.rs
    |
    |         F: Send + 'env,
    |            ^^^^ required by this bound in `crossbeam::thread::Scope::<'env>::spawn`
